css/dark-mode.css
[data-theme="dark"] {
    background-color: #111 !important;
    color: #eee;
}

[data-theme="dark"] .bg-light {
    background-color: #333 !important;
}

[data-theme="dark"] .bg-white {
    background-color: #000 !important;
}

[data-theme="dark"] .bg-black {
    background-color: #eee !important;
}

[data-theme="dark"] .card {
    background-color: #1f1f1f !important;
    border-color: #2f2f2f;
}

[data-theme="dark"] .card-header {
    background-color: #3f3f3f !important;
    border-color: #2f2f2f;
}

[data-theme="dark"] .form-control {
    color: #eee;
    background-color: #000 !important;
}

[data-theme="dark"] .active {
    color: #eee;
    background-color: #000 !important;
    box-shadow: #2f2f2f;
}

[data-theme="dark"] input {
    color: #eee;
    background-color: #000 !important;
}

[data-theme="dark"] .modal-content {
    color: #fff;
    background-color: #000 !important;
    border-color: #2f2f2f;
}

[data-theme="dark"] .mce-container-body {
    color: #fff;
    background-color: #000 !important;
    border-color: #2f2f2f;
}

[data-theme="dark"] .mce-widget {
    color: #fff;
    background-color: #000 !important;
    border-color: #2f2f2f;
}

[data-theme="dark"] .mce-text {
    color: #fff;
}

[data-theme="dark"] .mce-ico {
    color: #fff;
}

[data-theme="dark"] .mce-disabled {
    color: #2f2f2f;
    background-color: #2f2f2f !important;
}

[data-theme="dark"] .mce-content-body {
    color: #fff;
    background-color: #000 !important;
    border-color: #2f2f2f;
}

.mce-content-body {
    color: #fff;
    background-color: #000 !important;
    border-color: #fff;
}

